<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/note_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:descendantFocusability="beforeDescendants"
        android:focusableInTouchMode="true"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin" >

        <ImageView
            android:id="@+id/note_image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true" >

            <requestFocus>
            </requestFocus>
        </ImageView>

        <EditText
            android:id="@+id/note_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/note_image"
            android:layout_below="@+id/note_image"
            android:ems="10"
            android:hint="@string/prompt_note_content"
            android:inputType="textMultiLine"
            android:minLines="1"
            android:scrollbars="vertical" >
        </EditText>

        <Spinner
            android:id="@+id/note_context"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/note_content" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/note_save_cancel_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/actionbar_background" >

        <Button
            android:id="@+id/note_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/note_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:text="@string/save" />
    </RelativeLayout>

</RelativeLayout>